manifests/ecs-deny.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: ecs-deny
spec:
  action: DENY
  rules: 
  - {}
