manifests/post-only-allow.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: post-only
  namespace: ecs
spec:
  targetRefs:
  - kind: Gateway
    group: gateway.networking.k8s.io
    name: waypoint
  action: ALLOW
  rules:
  - from:
    - source:
        namespaces: ["default", "ecs"]
    to:
    - operation:
        methods: ["POST"]
